add func fprintf_Flush

--- a/Text-Adventure/Text-Adventure.vcxproj.filters
+++ b/Text-Adventure/Text-Adventure.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="history.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="items.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
