--- a/Text-Adventure/Text-Adventure.vcxproj.filters
+++ b/Text-Adventure/Text-Adventure.vcxproj.filters
@@ -27,4 +27,12 @@
       <Filter>리소스 파일</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="event.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ascii-art.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
